tests/negative/lexer/octal-digit.orng
fn main() -> Int {
    0oXYZ
}